--- a/DataVisualize_Demo/DataVisualize_Demo.vcxproj.filters
+++ b/DataVisualize_Demo/DataVisualize_Demo.vcxproj.filters
@@ -36,6 +36,24 @@
     <ClInclude Include="cMyTimer.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="myMutex.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="gdiPlusUse.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="WndManager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DFD.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DSP.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FIR.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -48,6 +66,24 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="cMyTimer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="myMutex.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="gdiPlusUse.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="WndManager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DFD.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DSP.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="FIR.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
